Revisión de ejemplos Capitulo 4.1

--- a/capitulos/Corpus.tex
+++ b/capitulos/Corpus.tex
@@ -97,7 +97,7 @@ Pese a que, como se ha presentado, existen gran cantidad de expresiones que conl
 \end{table}
 
 
-El término ?feminazi? es una forma de relacionar, de forma claramente despectiva, al feminismo con el nazismo. De este modo, es una palabra utilizada ampliamente en redes sociales y foros de toda España que conllevan actitudes machistas. En Twitter se encuentran mensajes como:
+El término ``feminaz'' es una forma de relacionar, de forma claramente despectiva, al feminismo con el nazismo. De este modo, es una palabra utilizada ampliamente en redes sociales y foros de toda España que conllevan actitudes machistas. En Twitter se encuentran mensajes como:
 
 	``\textit{Uy habló de inventos la feminazi}''
 	
@@ -125,13 +125,13 @@ Ejemplos que no expresan actitudes machistas:
 ``\textit{Me molesta que a esta hora me dé hambre porque me da miedo ir a la cocina por algo para comer}''
 
 
-Las palabras ``Marimach'' y ``Niñata'' se utilizan como calificativos despectivos a la mujer. El primer término se emplea para indicar que una mujer tiene rasgos propios de hombre mientras que el segundo se emplea para denotar inmadurez. Ejemplos despectivos serían los tweets encontrados:
+Las palabras ``Marimacho'' y ``Niñata'' se utilizan como calificativos despectivos a la mujer. El primer término se emplea para indicar que una mujer tiene rasgos propios de hombre mientras que el segundo se emplea para denotar inmadurez. Ejemplos despectivos serían los tweets encontrados:
 
 
-``\textit{Es un travesti o una marimacho pasada de anabolicos?}''
+``\textit{@IrantzuVarela hace unos sketches poniéndose unas barbas postizas despeinadas. Es lo que antes se llamaba un marimacho. El igualitarismo ha hecho mucho daño. Uno tiene que mandar y otro obedecer acríticamente.}''
 
 
-``\textit{Quien es esta puta niñata para exigir nada?}''
+``\textit{@carmenro\_ Mal follada y retrasada. Das pena niñata. Tienes un concepto muy equivocado de los andaluces y Andalucía. Gente como tú son las qué no queremos en nuestra comunidad. Aquí hay gente muy trabajadora y humilde. Envidia es lo que tienes.}''
 
 
 Las expresiones ``Mujer tenías que ser'' y ``Las Feministas'' se utilizan para descalificar a las mujeres por el hecho de pertenecer a un colectivo. Ejemplos encontrados en Twitter son los siguientes:
@@ -140,27 +140,27 @@ Las expresiones ``Mujer tenías que ser'' y ``Las Feministas'' se utilizan para d
 ``\textit{Mujer tenias que ser para dar una respuesta tan pobre}''
 
 
-``\textit{Ya salieron las feministas a dar la cara x @ aunque se lo fuma ella sola a el gordo sucio  a su segunda @ la anorexica}''
+``\textit{@NiicoMilan Coincido eso es el verdadero machismo que tiene un respeto absoluto por la mujer más no lo que quieren hacer las feministas pasar por machismo.Nadie puede lastimar a una mujer}''
 
 
 La expresión ``en tus días'' se utiliza como descalificativo para referirse a las mujeres por tener el periodo:
 
 
 
-``\textit{Estás insoportable en tus días.}''
+``\textit{@PriscilaTrs\_ Bb se delicia de culo no te dejaría descansar ni cuando estés en tus días mamasita rica me pasaría dándole placer mañana tarde y noche a ese delicioso culo hasta hacerte gritar de placer}''
 
 
 ``\textit{Seguro era porque andabas en tus días. xd}''
 
 
-El término ?zorra? se utiliza continuamente en Twitter con actitudes machistas:
+El término ``zorra'' se utiliza continuamente en Twitter con actitudes machistas:
 
 
 
 ``\textit{zorra se puede saber pork no me sigues?}''
 
 
-``\textit{No le presten atencion. como yo hago  a cualquier otro zorra}''
+``\textit{Dedicado a las estúpidas feminazis que dicen que a las mujeres hay que creerles todo solo por ser mujeres.SIN PRUEBAS NO HAY DELITO.https://t.co/XNx3fk3m5K}''
 
 Otra expresión que minusvalora a las mujeres es ``como una mujer'' para comparar una acción que se realiza peor por ser mujer:
 
@@ -196,7 +196,7 @@ Otra expresión muy similar a la anterior sería ``pareces una puta'':
 
 ``\textit{Deja de gritar hermano, pareces una puta}''
 
-``\textit{Por fin no pareces una puta paleta que habla sin mayúsculas}''
+``\textit{@emuyshondt @alcaldia\_ss @SSesTuyo podes administrar o no, porque te vibis quejan maje, mas bien pareces una puta}''
 
 
 Otra expresión machista utilizada en Twitter es ``no ha probado un hombre'':
@@ -208,7 +208,7 @@ Otra expresión machista utilizada en Twitter es ``no ha probado un hombre'':
 
 La expresión ``loca del'' se utiliza de forma despectiva hacia las mujeres:
 
-``\textit{Rosa Díez o mejor llamada la loca del coño }''
+``\textit{@Madrekoraje @PhilAMellows @CasosAislados Todo los hombres tenemos que tener miedo a cruzarnos con una loca del coño que se invente lo que le vengan en gana y por el mero hecho de tener papo haya que creerla.}''
 
 ``\textit{Odio a esta clase de feministas, loca del coño.}''
 
@@ -222,21 +222,14 @@ La frase ``obsesionada con el machismo'' se utiliza para restar importancia a la
 Otra expresión que minusvalora las habilidades de la mujer sería ``para ser mujer'':
 
 
-``\textit{Tomarás hormonas para ser mujer?}''
+``\textit{@damita2808 @berege7 @Mariagtriana Y los ojos? Uff demasiado dureza en la mirada para ser chica...no?}''
 
-``\textit{La Pamela es como una comunista, siempre poniendo problemas.
-	Y malas relaciones.
-	Se cree dueña de la verdad.
-	Es una rota ordinaria, inculta .
-	Le falta mucho para ser mujer decente.
-	Qué la corten de la TV luego y contraten gente culta.
-	Además, está guatona y fea. 
-}''
+``\textit{Para ser mujer habla bastante decente ...}''
 
 
 Otra expresión similar a la anterior sería ``para ser chica'':
 
-``\textit{Daniella Chávez solo quiere pantalla, si vas a vértigo sabes que eres parte de la rutina de yerko, ademas Daniella demostró en el capítulo que para lo único que sirve es para ser chica Playboy, y no soy machista, solo soy un simple espectador \#YerkoPuchento }''
+``\textit{@GreatBlastG5 Mi madre mide bien para ser chica, y mi padre es de estatura media, lo de los yogures te lo decía a ti porque se que me mientes prro}''
 
 ``\textit{Sos un poco masculina como para ser chica, ¿sabías?}''
 
@@ -260,13 +253,13 @@ Otra expresión machista utilizada en Twitter es ``acabaras sola'':
 Otro insulto muy recurrente es ``mojigata'':
 
 
-``\textit{?\#EnLaPedaNuncaFalta la mojigata persinada que con 3 tequilas encima es más fácil que la tabla del 1. }''
+``\textit{\#EnLaPedaNuncaFalta la mojigata persinada que con 3 tequilas encima es más fácil que la tabla del 1. }''
 
-``\textit{Qué lindo que se le va cayendo la careta a la mojigata esa!!!!}''
+``\textit{@Mony\_loreH Y CON ESA CARITA ME MOJIGATA QUE TIENE.....SON LAS PEORES......}''
 
 La expresión ``mucho feminismo pero'' se utiliza para minusvalorar el papel del feminismo en la sociedad:
 
-``\textit{?Pues menuda hija de mierda si tienes a tu padre cargando con TODAS las tareas del hogar. Mucho feminismo, pero de compartir las labores no te enseñó nada.}''
+``\textit{Pues menuda hija de mierda si tienes a tu padre cargando con TODAS las tareas del hogar. Mucho feminismo, pero de compartir las labores no te enseñó nada.}''
 
 ``\textit{Mucho feminismo pero Christian Gray se las hace mojar qué tipo hdp este pibe jajaja}''
 
@@ -278,7 +271,7 @@ La expresión ``mujer al volante'' se utiliza habitualmente para minusvalorar la 
 ``\textit{No hay nada más peligroso que una mujer al volante con prisa . Nada, ni MALO De presidente es tan peligroso}''
 
 
-Otra expresión que suele conllevar actitudes machistas ``las mujeres no debería'':
+Otra expresión que suele conllevar actitudes machistas ``las mujeres no deberían'':
 
 
 ``\textit{Las mujeres no deberían de tener ni voz ni voto, no están preparadas para mantener una familia menos un gobierno , son unas mantenidas}''
@@ -296,7 +289,7 @@ La frase ``A las mujeres hay que'' se utiliza habitualmente para discriminarlas 
 Otra expresión que suele conllevar actitudes machistas ``odio a las mujeres'':
 
 
-``\textit{Ok. Con esto la loca se gano a todas las femininazis. Apuesto cualquier cosa, que salen las feministas a una marcha diciendo que Macri odia a las mujeres. En EEUU tambien fue campaña con trump machista y su "odio a las mujeres". Asi se maneja la izquierda, campaña: odio}''
+``\textit{Odio a las mujeres pero me atraen sexualmente}''
 
 ``\textit{A lo que hemos llegado, lo unico que van a conseguir las feministas es el odio a las mujeres}''
 
@@ -309,7 +302,7 @@ Otra expresión que suele conllevar actitudes machistas ``las mujeres de hoy en d
 
 Por último, el insulto ``lagartona'' se utiliza de forma despectiva hacia las mujeres:
 
-``\textit{Trata de nublar la verdad esta lagartona, aparte super fea}''
+``\textit{@pescadosgori ¿Solo le quieres por el dinero? ¡Ay ay ay lagartona! https://t.co/7HE8PrXdDk}''
 
 ``\textit{No quiero depender de nadie. No soy una lagartona ni la zorrita de nadie, si no un hombre}''
 
