Explicación teórica de kappa

--- a/Bibliografia.bib
+++ b/Bibliografia.bib
@@ -308,4 +308,11 @@
   url   = {https://help.twitter.com/en/rules-and-policies/hateful-conduct-policy},
 }
 
+@InProceedings{Cohen1960,
+  author    = {Jacob Cohen},
+  title     = {A Coefficient of Agreement for Nominal Scales},
+  booktitle = {U.S. Geological Survey},
+  year      = {1960},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
